services/user/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user
  namespace: default
spec:
  selector:
    app: user
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
